tests/snapshots/snapshot_cdk_tests__snapshot_cdk_rds_instance_class_upgrade.snap
---
source: tests/snapshot_cdk_tests.rs
expression: diff
---
{
  "Resources": {
    "Database": {
      "ChangeType": "Update",
      "Properties": {
        "DBInstanceClass": {
          "New": "db.r5.xlarge",
          "Old": "db.t3.small"
        }
      },
      "Type": "AWS::RDS::DBInstance"
    }
  }
}
