tests/snapshots/snapshot_cdk_tests__snapshot_cdk_resource_removal.snap
---
source: tests/snapshot_cdk_tests.rs
expression: diff
---
{
  "Resources": {
    "OldFunction": {
      "ChangeType": "Removal",
      "Type": "AWS::Lambda::Function"
    }
  }
}
