tests/snapshots/snapshot_cdk_tests__snapshot_cdk_resource_replacement.snap
---
source: tests/snapshot_cdk_tests.rs
expression: diff
---
{
  "Resources": {
    "Database": {
      "ChangeType": "Replacement",
      "Properties": {
        "AvailabilityZone": {
          "New": "us-east-1b",
          "Old": "us-east-1a"
        }
      },
      "Type": "AWS::RDS::DBInstance"
    }
  }
}
